// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkingStack Test Suite Snapshots Flow Logs match snapshot 1`] = `
{
  "FlowLogsFlowLogF7AE7EFB": {
    "Properties": {
      "DeliverLogsPermissionArn": {
        "Fn::GetAtt": [
          "FlowLogsFlowLogIAMRoleF95C6C6D",
          "Arn",
        ],
      },
      "LogDestinationType": "cloud-watch-logs",
      "LogGroupName": {
        "Ref": "FlowLogsLogGroup9853A85F",
      },
      "ResourceId": {
        "Ref": "VpcC3027511",
      },
      "ResourceType": "VPC",
      "Tags": [
        {
          "Key": "Environment",
          "Value": "test",
        },
        {
          "Key": "ManagedBy",
          "Value": "CDK",
        },
        {
          "Key": "Name",
          "Value": "test-vpc-flow-logs",
        },
        {
          "Key": "Stack",
          "Value": "Networking",
        },
      ],
      "TrafficType": "ALL",
    },
    "Type": "AWS::EC2::FlowLog",
  },
}
`;

exports[`NetworkingStack Test Suite Snapshots NetworkingStack matches snapshot 1`] = `
{
  "Metadata": {
    "cdk_nag": {
      "rules_to_suppress": [
        {
          "applies_to": [
            "Policy::arn:<AWS::Partition>:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          ],
          "id": "AwsSolutions-IAM4",
          "reason": "AWS managed policies are used for Lambda functions created by CDK for custom resources (Auto Scaling lifecycle hooks, VPC default security group restriction, EventBridge targets). These are standard CloudFormation custom resource Lambda functions managed by CDK.",
        },
        {
          "applies_to": [
            "Resource::*",
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "Wildcard permissions are used by CDK-managed custom resource Lambdas for EventBridge to CloudWatch Logs integration and other CDK framework operations. This is required by the CDK framework to manage resource policies and cannot be scoped further. This is standard CDK behavior.",
        },
        {
          "applies_to": [
            "Action::ecs:Submit*",
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "ECS Container Instance IAM role requires wildcard action permissions (ecs:Submit*) to communicate with ECS control plane. This is a standard permission for ECS EC2 instances as documented in AWS ECS best practices and is created by CDK's Auto Scaling Group construct.",
        },
        {
          "applies_to": [
            {
              "regex": "/^Resource::arn:aws:autoscaling:.*:autoScalingGroup:\\*:autoScalingGroupName\\/<.*>$/",
            },
          ],
          "id": "AwsSolutions-IAM5",
          "reason": "Auto Scaling Group lifecycle hook Lambda (DrainECSHook) requires permissions to manage Auto Scaling lifecycle actions. The wildcard is scoped to the specific Auto Scaling Group name pattern and is necessary for proper instance lifecycle management during ECS task draining. This is a CDK-managed resource.",
        },
        {
          "id": "AwsSolutions-L1",
          "reason": "Lambda runtime versions are managed by CDK for custom resources. CDK automatically updates these with new releases. Upgrading CDK version will update these runtimes.",
        },
        {
          "id": "AwsSolutions-VPC7",
          "reason": "VPC Flow Logs are disabled to reduce costs in development environments. For production, enable VPC Flow Logs to CloudWatch Logs or S3 for network troubleshooting and security analysis.",
        },
      ],
    },
  },
  "Outputs": {
    "AvailabilityZones": {
      "Description": "Availability Zones",
      "Export": {
        "Name": "test-azs",
      },
      "Value": "dummy1a,dummy1b",
    },
    "FlowLogsLogGroup": {
      "Description": "VPC Flow Logs CloudWatch Log Group",
      "Export": {
        "Name": "test-flow-logs-log-group",
      },
      "Value": {
        "Ref": "FlowLogsLogGroup9853A85F",
      },
    },
    "PrivateSubnet1Id": {
      "Description": "Private Subnet 1 ID",
      "Export": {
        "Name": "test-private-subnet-1-id",
      },
      "Value": {
        "Ref": "VpcPrivateSubnet1Subnet67A4DBCB",
      },
    },
    "PrivateSubnet2Id": {
      "Description": "Private Subnet 2 ID",
      "Export": {
        "Name": "test-private-subnet-2-id",
      },
      "Value": {
        "Ref": "VpcPrivateSubnet2SubnetC8EB537D",
      },
    },
    "PublicSubnet1Id": {
      "Description": "Public Subnet 1 ID",
      "Export": {
        "Name": "test-public-subnet-1-id",
      },
      "Value": {
        "Ref": "VpcPublicSubnet1Subnet8E8DEDC0",
      },
    },
    "PublicSubnet2Id": {
      "Description": "Public Subnet 2 ID",
      "Export": {
        "Name": "test-public-subnet-2-id",
      },
      "Value": {
        "Ref": "VpcPublicSubnet2SubnetA811849C",
      },
    },
    "VpcCidr": {
      "Description": "VPC CIDR Block",
      "Export": {
        "Name": "test-vpc-cidr",
      },
      "Value": {
        "Fn::GetAtt": [
          "VpcC3027511",
          "CidrBlock",
        ],
      },
    },
    "VpcId": {
      "Description": "VPC ID",
      "Export": {
        "Name": "test-vpc-id",
      },
      "Value": {
        "Ref": "VpcC3027511",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
      "DependsOn": [
        "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-eu-west-1",
          "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip",
        },
        "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group",
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "ec2:AuthorizeSecurityGroupIngress",
                    "ec2:AuthorizeSecurityGroupEgress",
                    "ec2:RevokeSecurityGroupIngress",
                    "ec2:RevokeSecurityGroupEgress",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":ec2:eu-west-1:123456789012:security-group/",
                          {
                            "Fn::GetAtt": [
                              "VpcC3027511",
                              "DefaultSecurityGroup",
                            ],
                          },
                        ],
                      ],
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FlowLogsFlowLogF7AE7EFB": {
      "Properties": {
        "DeliverLogsPermissionArn": {
          "Fn::GetAtt": [
            "FlowLogsFlowLogIAMRoleF95C6C6D",
            "Arn",
          ],
        },
        "LogDestinationType": "cloud-watch-logs",
        "LogGroupName": {
          "Ref": "FlowLogsLogGroup9853A85F",
        },
        "ResourceId": {
          "Ref": "VpcC3027511",
        },
        "ResourceType": "VPC",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "test-vpc-flow-logs",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
        "TrafficType": "ALL",
      },
      "Type": "AWS::EC2::FlowLog",
    },
    "FlowLogsFlowLogIAMRoleDefaultPolicyF1178BCF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
                "logs:DescribeLogStreams",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FlowLogsLogGroup9853A85F",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "FlowLogsFlowLogIAMRoleDefaultPolicyF1178BCF",
        "Roles": [
          {
            "Ref": "FlowLogsFlowLogIAMRoleF95C6C6D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "FlowLogsFlowLogIAMRoleF95C6C6D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "vpc-flow-logs.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "test-vpc-flow-logs",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FlowLogsLogGroup9853A85F": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/aws/vpc/flowlogs/test",
        "RetentionInDays": 7,
        "Tags": [
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "test-vpc-flow-logs",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "VpcC3027511": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "test-vpc",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "VpcDynamoDbEndpointDE074E93": {
      "Properties": {
        "RouteTableIds": [
          {
            "Ref": "VpcPrivateSubnet1RouteTable901BAEEE",
          },
          {
            "Ref": "VpcPrivateSubnet2RouteTable1EA00C9D",
          },
          {
            "Ref": "VpcPublicSubnet1RouteTable431DD755",
          },
          {
            "Ref": "VpcPublicSubnet2RouteTable77FB35FC",
          },
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region",
              },
              ".dynamodb",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "test-vpc",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
        "VpcEndpointType": "Gateway",
        "VpcId": {
          "Ref": "VpcC3027511",
        },
      },
      "Type": "AWS::EC2::VPCEndpoint",
    },
    "VpcIGW488B0FEB": {
      "Properties": {
        "Tags": [
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "test-vpc",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "VpcPrivateSubnet1RouteTable901BAEEE": {
      "Properties": {
        "Tags": [
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "TestNetworkingStack/Vpc/Vpc/PrivateSubnet1",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
        "VpcId": {
          "Ref": "VpcC3027511",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPrivateSubnet1RouteTableAssociation2BC202CB": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet1RouteTable901BAEEE",
        },
        "SubnetId": {
          "Ref": "VpcPrivateSubnet1Subnet67A4DBCB",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPrivateSubnet1Subnet67A4DBCB": {
      "Properties": {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.0.2.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "TestNetworkingStack/Vpc/Vpc/PrivateSubnet1",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
        "VpcId": {
          "Ref": "VpcC3027511",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPrivateSubnet2RouteTable1EA00C9D": {
      "Properties": {
        "Tags": [
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "TestNetworkingStack/Vpc/Vpc/PrivateSubnet2",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
        "VpcId": {
          "Ref": "VpcC3027511",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPrivateSubnet2RouteTableAssociationFA51927B": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet2RouteTable1EA00C9D",
        },
        "SubnetId": {
          "Ref": "VpcPrivateSubnet2SubnetC8EB537D",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPrivateSubnet2SubnetC8EB537D": {
      "Properties": {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.0.3.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "TestNetworkingStack/Vpc/Vpc/PrivateSubnet2",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
        "VpcId": {
          "Ref": "VpcC3027511",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet1DefaultRoute0F5C6C43": {
      "DependsOn": [
        "VpcVPCGW42EC8516",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGW488B0FEB",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable431DD755",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet1RouteTable431DD755": {
      "Properties": {
        "Tags": [
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "TestNetworkingStack/Vpc/Vpc/PublicSubnet1",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
        "VpcId": {
          "Ref": "VpcC3027511",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet1RouteTableAssociationBBCB7AA1": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable431DD755",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet8E8DEDC0",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet1Subnet8E8DEDC0": {
      "Properties": {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.0.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "TestNetworkingStack/Vpc/Vpc/PublicSubnet1",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
        "VpcId": {
          "Ref": "VpcC3027511",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet2DefaultRouteD629179A": {
      "DependsOn": [
        "VpcVPCGW42EC8516",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGW488B0FEB",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable77FB35FC",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet2RouteTable77FB35FC": {
      "Properties": {
        "Tags": [
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "TestNetworkingStack/Vpc/Vpc/PublicSubnet2",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
        "VpcId": {
          "Ref": "VpcC3027511",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet2RouteTableAssociation3AFE92E6": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable77FB35FC",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet2SubnetA811849C",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet2SubnetA811849C": {
      "Properties": {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "TestNetworkingStack/Vpc/Vpc/PublicSubnet2",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
        "VpcId": {
          "Ref": "VpcC3027511",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcRestrictDefaultSecurityGroupCustomResource1EDFC75B": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Account": "123456789012",
        "DefaultSecurityGroupId": {
          "Fn::GetAtt": [
            "VpcC3027511",
            "DefaultSecurityGroup",
          ],
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
            "Arn",
          ],
        },
      },
      "Type": "Custom::VpcRestrictDefaultSG",
      "UpdateReplacePolicy": "Delete",
    },
    "VpcS3Endpoint4A6BE1FA": {
      "Properties": {
        "RouteTableIds": [
          {
            "Ref": "VpcPrivateSubnet1RouteTable901BAEEE",
          },
          {
            "Ref": "VpcPrivateSubnet2RouteTable1EA00C9D",
          },
          {
            "Ref": "VpcPublicSubnet1RouteTable431DD755",
          },
          {
            "Ref": "VpcPublicSubnet2RouteTable77FB35FC",
          },
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region",
              },
              ".s3",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "test-vpc",
          },
          {
            "Key": "Stack",
            "Value": "Networking",
          },
        ],
        "VpcEndpointType": "Gateway",
        "VpcId": {
          "Ref": "VpcC3027511",
        },
      },
      "Type": "AWS::EC2::VPCEndpoint",
    },
    "VpcVPCGW42EC8516": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "VpcIGW488B0FEB",
        },
        "VpcId": {
          "Ref": "VpcC3027511",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`NetworkingStack Test Suite Snapshots Subnets match snapshot 1`] = `
{
  "VpcPrivateSubnet1Subnet67A4DBCB": {
    "Properties": {
      "AvailabilityZone": "dummy1a",
      "CidrBlock": "10.0.2.0/24",
      "MapPublicIpOnLaunch": false,
      "Tags": [
        {
          "Key": "aws-cdk:subnet-name",
          "Value": "Private",
        },
        {
          "Key": "aws-cdk:subnet-type",
          "Value": "Private",
        },
        {
          "Key": "Environment",
          "Value": "test",
        },
        {
          "Key": "ManagedBy",
          "Value": "CDK",
        },
        {
          "Key": "Name",
          "Value": "TestNetworkingStack/Vpc/Vpc/PrivateSubnet1",
        },
        {
          "Key": "Stack",
          "Value": "Networking",
        },
      ],
      "VpcId": {
        "Ref": "VpcC3027511",
      },
    },
    "Type": "AWS::EC2::Subnet",
  },
  "VpcPrivateSubnet2SubnetC8EB537D": {
    "Properties": {
      "AvailabilityZone": "dummy1b",
      "CidrBlock": "10.0.3.0/24",
      "MapPublicIpOnLaunch": false,
      "Tags": [
        {
          "Key": "aws-cdk:subnet-name",
          "Value": "Private",
        },
        {
          "Key": "aws-cdk:subnet-type",
          "Value": "Private",
        },
        {
          "Key": "Environment",
          "Value": "test",
        },
        {
          "Key": "ManagedBy",
          "Value": "CDK",
        },
        {
          "Key": "Name",
          "Value": "TestNetworkingStack/Vpc/Vpc/PrivateSubnet2",
        },
        {
          "Key": "Stack",
          "Value": "Networking",
        },
      ],
      "VpcId": {
        "Ref": "VpcC3027511",
      },
    },
    "Type": "AWS::EC2::Subnet",
  },
  "VpcPublicSubnet1Subnet8E8DEDC0": {
    "Properties": {
      "AvailabilityZone": "dummy1a",
      "CidrBlock": "10.0.0.0/24",
      "MapPublicIpOnLaunch": true,
      "Tags": [
        {
          "Key": "aws-cdk:subnet-name",
          "Value": "Public",
        },
        {
          "Key": "aws-cdk:subnet-type",
          "Value": "Public",
        },
        {
          "Key": "Environment",
          "Value": "test",
        },
        {
          "Key": "ManagedBy",
          "Value": "CDK",
        },
        {
          "Key": "Name",
          "Value": "TestNetworkingStack/Vpc/Vpc/PublicSubnet1",
        },
        {
          "Key": "Stack",
          "Value": "Networking",
        },
      ],
      "VpcId": {
        "Ref": "VpcC3027511",
      },
    },
    "Type": "AWS::EC2::Subnet",
  },
  "VpcPublicSubnet2SubnetA811849C": {
    "Properties": {
      "AvailabilityZone": "dummy1b",
      "CidrBlock": "10.0.1.0/24",
      "MapPublicIpOnLaunch": true,
      "Tags": [
        {
          "Key": "aws-cdk:subnet-name",
          "Value": "Public",
        },
        {
          "Key": "aws-cdk:subnet-type",
          "Value": "Public",
        },
        {
          "Key": "Environment",
          "Value": "test",
        },
        {
          "Key": "ManagedBy",
          "Value": "CDK",
        },
        {
          "Key": "Name",
          "Value": "TestNetworkingStack/Vpc/Vpc/PublicSubnet2",
        },
        {
          "Key": "Stack",
          "Value": "Networking",
        },
      ],
      "VpcId": {
        "Ref": "VpcC3027511",
      },
    },
    "Type": "AWS::EC2::Subnet",
  },
}
`;

exports[`NetworkingStack Test Suite Snapshots VPC resource matches snapshot 1`] = `
{
  "VpcC3027511": {
    "Properties": {
      "CidrBlock": "10.0.0.0/16",
      "EnableDnsHostnames": true,
      "EnableDnsSupport": true,
      "InstanceTenancy": "default",
      "Tags": [
        {
          "Key": "Environment",
          "Value": "test",
        },
        {
          "Key": "ManagedBy",
          "Value": "CDK",
        },
        {
          "Key": "Name",
          "Value": "test-vpc",
        },
        {
          "Key": "Stack",
          "Value": "Networking",
        },
      ],
    },
    "Type": "AWS::EC2::VPC",
  },
}
`;
